--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    // Implement zxing to read qr code
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
