--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -27,6 +28,8 @@
         <activity
             android:name=".DetailImageInsuranceActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity android:name=".QRCodeScannerActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="@string/file_provider"
